--- a/hw/index.html
+++ b/hw/index.html
@@ -6,50 +6,63 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>CS171 - HW 5</title>
 
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div class="bg"></div>
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container">
+			<h1>FIFA World Cup<sup>TM</sup></h1>
+			<h2>All Time Statistics</h2>
+		</div>
+	</div>
+
 	<div class="container">
 
-		<h1>FIFA World Cup<sup>TM</sup></h1>
-		<h2>All Time Statistics</h2>
+		<div class="row">
+			<div class="col-sm-3 col-xs-12">
+				<!-- Select box to choose the ranking type -->
+				<form class="form-inline">
+					<div class="form-row">
+						<div class="form-group">
+							<label for="ranking-type">Data: </label>
+							<select class="form-control" id="ranking-type" onchange="updateVisualization()">
+								<option value="GOALS">Goals</option>
+								<option value="AVERAGE_GOALS">Average Goals</option>
+								<option value="MATCHES">Matches</option>
+								<option value="TEAMS">Teams</option>
+								<option value="AVERAGE_ATTENDANCE">Average Attendance</option>
+							</select>
 
-		<!-- Select box to choose the ranking type -->
-		<form class="form-inline">
-			<div class="form-row">
-			<div class="form-group">
-				<label for="ranking-type">Chart Data: </label>
-				<select class="form-control" id="ranking-type" onchange="updateVisualization()">
-					<option value="GOALS">Goals</option>
-					<option value="AVERAGE_GOALS">Average Goals</option>
-					<option value="MATCHES">Matches</option>
-					<option value="TEAMS">Teams</option>
-					<option value="AVERAGE_ATTENDANCE">Average Attendance</option>
-				</select>
-
-				<!-- Activity IV -->
-				<!--<button type="button" class="btn btn-link" id="change-sorting"><i class="glyphicon glyphicon-sort"></i> Sort</button>-->
-			</div>
-			</div>
-		</form>
-		<form class="form-inline time-form" id="time-form" onsubmit="updateVisualization();return false">
-			<div class="form-row">
-				<div class="form-group">
-					<label for="time-period-from">Filter by Time Period: </label>
-					<input type="text" class="form-control" id="time-period-from" placeholder="1930">
-					<!-- value="1930" -->
-				</div>
-				<div class="form-group">
-					<label for="time-period-to">-</label>
-					<input type="text" class="form-control" id="time-period-to" placeholder="2014">
-				</div>
-				<div class="form-group">
-					<button type="submit" class="btn btn-primary" id="time-form-submit">Filter</button>
-				</div>
+							<!-- Activity IV -->
+							<!--<button type="button" class="btn btn-link" id="change-sorting"><i class="glyphicon glyphicon-sort"></i> Sort</button>-->
+						</div>
+					</div>
+				</form>
 
 			</div>
-		</form>
+			<div class="col-sm-9 col-xs-12">
+				<form class="form-inline time-form mx-auto" id="time-form" onsubmit="updateVisualization();return false">
+					<div class="form-row">
+						<div class="form-group">
+							<label for="time-period-from">Filter by Time Period: </label>
+							<input type="text" class="form-control" id="time-period-from" placeholder="1930">
+							<!-- value="1930" -->
+						</div>
+						<div class="form-group">
+							<label for="time-period-to">-</label>
+							<input type="text" class="form-control" id="time-period-to" placeholder="2014">
+						</div>
+						<div class="form-group">
+							<button type="submit" class="btn btn-primary" id="time-form-submit">Filter</button>
+						</div>
+
+					</div>
+				</form>
+			</div>
+		</div>
 
 		<div class="row">
 			<div class="col">
@@ -59,7 +72,7 @@
 			<div class="col">
 				<!-- Parent container for the details -->
 				<div id="detail-area">
-
+					Click on a point to see more details
 				</div>
 			</div>
 		</div>
@@ -75,9 +88,6 @@
 	<script src="js/d3-tip.js"></script>
 
 	<!-- Your implementation -->
-<!--	<script src="js/testFocus.js"></script>-->
-<!--	<script src="js/appendTooltips.js"></script>-->
-<!--	<script src="js/mousemove.js"></script>-->
 	<script src="js/main.js"></script>
 </body>
 </html>
